# typed-i18n

./: .gitignore  Cargo.toml  LICENSE  README.md  check.sh
.github/workflows/: check.yml  nostd.yml  safety.yml  scheduled.yml  test.yml
examples/: Cargo.toml  demo.yaml
examples/src/: cows.rs  html.rs  lib.rs
typed-i18n/: Cargo.toml  Changelog.md  example.lrc  example.yaml
typed-i18n-derive/: Cargo.toml  Changelog.md  README.md
typed-i18n-derive/src/: lib.rs
typed-i18n-support/: Cargo.toml  Changelog.md  README.md
typed-i18n-support/src/: diagnostic.rs  generator.rs  languages.rs  lib.rs
typed-i18n-support/src/attribute/: attributes.rs  builder.rs  mod.rs  parameters.rs  parser.rs
typed-i18n-support/src/messages/: lrc.rs  message.rs  message_line.rs  messages.rs  mod.rs  param_type.rs  piece.rs  raw.rs  serde.rs
typed-i18n-support/tests/: basic.rs  languages.rs  lrc.rs  raw.rs  serde_output.rs  serde_reader.rs
typed-i18n-support/tests/common/: mod.rs
typed-i18n/src/: alloc.rs  lib.rs
typed-i18n/tests/: alloc.rs  basic.rs  basic_lrc.rs  compile_fail.rs  generic_builder.rs  generic_input.rs  global_atomic.rs  input_conversion_as_ref.rs  input_conversion_into.rs  input_conversion_ref.rs  input_conversion_value.rs  static_str.rs  str_conversion_as_ref.rs  string_builder.rs
typed-i18n/tests/common/: mod.rs
typed-i18n/tests/compile-fail/: demo.lrc  duplicate_name.rs  duplicate_name.stderr  duplicate_parameters.rs  duplicate_parameters.stderr  duplicate_variant_attribute.rs  duplicate_variant_attribute.stderr  invalid_builder_type.rs  invalid_builder_type.stderr  invalid_input_type.rs  invalid_input_type.stderr  invalid_separator.rs  invalid_separator.stderr  language_not_known.lrc  language_not_known.rs  language_not_known.stderr  no_builders.rs  no_builders.stderr  no_parameters.rs  no_parameters.stderr  only_enums.rs  only_enums.stderr  only_unit_fields.rs  only_unit_fields.stderr  special_w_input.rs  special_w_input.stderr  unsupported_attribute.rs  unsupported_attribute.stderr  unsupported_attribute_type.rs  unsupported_attribute_type.stderr  unsupported_input_conversion.rs  unsupported_input_conversion.stderr  unsupported_path.rs  unsupported_path.stderr  unsupported_str_conversion.rs  unsupported_str_conversion.stderr
