[package]
name = "typed-i18n-support"
version = "0.7.2"
authors = ["ALeX Kazik <alex@kazik.de>"]
edition = "2021"
description = "Support crate for the derive macro for typed-i18n"
repository = "https://github.com/alexkazik/typed-i18n"
license = "MIT"
keywords = []
categories = []
readme = "README.md"
rust-version = "1.64.0"

[dependencies]
convert_case = "0.6"
indexmap = { version = "2", features = ["serde"] }
ouroboros = "0.18.2"
proc-macro-error = { version = "1.0.4", default-features = false }
proc-macro2 = "1"
quote = "1.0.26"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.73"
serde_yaml = "0.9.22"
syn = { version = "2", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
unicode-ident = "1"
